# Telescope-Searching-Problem

./: .gitignore  AntColony.cpp  AntColony.h  BranchBound.cpp  BranchBound.h  CMakeLists.txt  Christofides.cpp  Christofides.h  Genetic.cpp  Genetic.h  Genetic_st.cpp  Graph.cpp  Graph.h  Greedy.cpp  Greedy.h  ILP_gurobi.cpp  ILP_gurobi.h  ILP_scip.cpp  ILP_scip.h  README.html  README.md  ReadData.cpp  ReadData.h  SimulatedAnnealing.cpp  SimulatedAnnealing.h  helplers.cpp  helplers.h  kMST.cpp  kMST.h  main.cpp  mst.cpp  mst.h  mstHoogeveen.cpp  mstHoogeveenParallel.cpp  requirements.txt  rtss25-sky-tiling.yml  rtss25-telescope-search.yml
ILP/: display_result.run  gen_inputdata.py  op.mod  tsp.mod
Prize-Collecting-TSP-with-Budget/: CMakeLists.txt  PD.cpp  ReadFile.cpp  ReadFile.hpp  bier30.tsp  bpc_tsp.cpp  bpc_tsp.h  christofides.cpp  christofides.h
data/: 7dt_combined.csv  7dt_separate.csv  deep_slow.csv  rotate_coord.py  rotated_deep_slow.csv
data/large/: filtered_GW191103_012549_7dt.csv  filtered_GW191109_010717_7dt.csv  filtered_GW191126_115259_7dt.csv  filtered_GW191127_050227_7dt.csv  filtered_GW191204_110529_7dt.csv  filtered_GW191216_213338_7dt.csv  filtered_GW191219_163120_7dt.csv  filtered_GW191222_033537_7dt.csv  filtered_GW191230_180458_7dt.csv  filtered_GW200105_162426_7dt.csv  filtered_GW200112_155838_7dt.csv  filtered_GW200128_022011_7dt.csv  filtered_GW200209_085452_7dt.csv  filtered_GW200210_092254_7dt.csv  filtered_GW200220_061928_7dt.csv  filtered_GW200302_015811_7dt.csv  filtered_GW200308_173609_7dt_separate.csv  filtered_GW200322_091133_7dt_separate.csv  filtered_GW230529_181500_7dt_separate.csv
data/large_moet/: filtered_GW191113_071753_7dt.csv  filtered_GW200208_222617_7dt.csv  filtered_GW200306_093714_7dt.csv
data/large_wcet/: filtered_GW200216_220804_7dt.csv  filtered_GW200220_124850_7dt.csv
data/ligo_healpix_flattened/: GW191103_012549.fits  GW191105_143521.fits  GW191109_010717.fits  GW191113_071753.fits  GW191126_115259.fits  GW191127_050227.fits  GW191129_134029.fits  GW191204_110529.fits  GW191204_171526.fits  GW191215_223052.fits  GW191216_213338.fits  GW191219_163120.fits  GW191222_033537.fits  GW191230_180458.fits  GW200105_162426.fits  GW200112_155838.fits  GW200115_042309.fits  GW200128_022011.fits  GW200129_065458.fits  GW200202_154313.fits  GW200208_130117.fits  GW200208_222617.fits  GW200209_085452.fits  GW200210_092254.fits  GW200216_220804.fits  GW200219_094415.fits  GW200220_061928.fits  GW200220_124850.fits  GW200224_222234.fits  GW200225_060421.fits  GW200302_015811.fits  GW200306_093714.fits  GW200308_173609.fits  GW200311_115853.fits  GW200316_215756.fits  GW200322_091133.fits  GW230529_181500.fits
data/small/: filtered_GW191105_143521_7dt_separate.csv  filtered_GW191129_134029_7dt_separate.csv  filtered_GW191204_171526_7dt_separate.csv  filtered_GW191215_223052_7dt_separate.csv  filtered_GW191216_213338_7dt_separate.csv  filtered_GW191230_180458_7dt_separate.csv  filtered_GW200115_042309_7dt_separate.csv  filtered_GW200129_065458_7dt_separate.csv  filtered_GW200202_154313_7dt_separate.csv  filtered_GW200208_130117_7dt_separate.csv  filtered_GW200209_085452_7dt_separate.csv  filtered_GW200219_094415_7dt_separate.csv  filtered_GW200224_222234_7dt_separate.csv  filtered_GW200225_060421_7dt_separate.csv  filtered_GW200311_115853_7dt_separate.csv  filtered_GW200316_215756_7dt_separate.csv
data/wcrt/: GW200208_222617_7dt.csv  GW200216_220804_7dt.csv
include/: AntColony.h  GCP.h  Genetic.h  Greedy.h  ILP_cplex.h  ILP_gurobi.h  ReadData.h  TestFunctions.h  helplers.h
results/: analysis_precomputed_results.ipynb  analyze_results.ipynb  run_all.sh  run_instances_with_moet.py  run_instances_with_wcet.py  run_large_instances.py  run_multi_deadline.py  run_multi_deadlines.py  run_small_instances.py  run_small_instances_moet.py  run_small_instances_wcet.py  visualize_results.ipynb
results/RTSS/: out_.csv  out_GW200105_162426.csv  out_GW200129_065458_seperate.csv  out_GW200216_220804.csv  out_GW200311_115853.csv
results/RTSS/small_cases/: out_GW200316_215756_104nodes.csv  out_GW200316_215756_59.csv  out_GW200316_215756_70.csv
results/RTSS_0518/: out.csv  out_.csv  out_filtered_GW191103_012549_7dt.csv  out_filtered_GW191109_010717_7dt.csv  out_filtered_GW191113_071753_7dt.csv  out_filtered_GW191126_115259_7dt.csv  out_filtered_GW191127_050227_7dt.csv  out_filtered_GW191204_110529_7dt.csv  out_filtered_GW191216_213338_7dt.csv  out_filtered_GW191219_163120_7dt.csv  out_filtered_GW191222_033537_7dt.csv  out_filtered_GW191230_180458_7dt.csv  out_filtered_GW200105_162426_7dt.csv  out_filtered_GW200112_155838_7dt.csv  out_filtered_GW200128_022011_7dt.csv  out_filtered_GW200208_222617_7dt.csv  out_filtered_GW200209_085452_7dt.csv  out_filtered_GW200210_092254_7dt.csv  out_filtered_GW200216_220804_7dt.csv
results/RTSS_0518/gap_verify_small/: out_filtered_GW191105_143521_7dt_separate.csv  out_filtered_GW191129_134029_7dt_separate.csv  (+14 more)
results/RTSS_result/: GAP_large.csv  analyze_cdf.py  analyze_results_plot.py  box_plot.py  box_plot_large.py  compare_likelihood_combined.py  compare_time.py  fix_result.py  map_visualization.py  multi_deadline copy.py  multi_deadline.py  plot_deadline_vs_cost.py  plot_large_instances.py  plot_large_instances_ILP.py  plot_large_instances_gurobi.py  plot_small_instances.py  plot_small_with_wcrt.py  plot_trend.py  visualize5.py
results/precomputed_results/: analysis_precomputed_results.ipynb  plot_large_instances.py  plot_multi_deadlines.py  plot_small_instances.py  plot_small_with_wcrt.py  rtss_result_analysis_final.ipynb
results/recomputed_results/: analysis_recomputed_results.ipynb
sky_tiling/: flatten_healpix.py  precompute_tile_maps.sh  produce_single_tiling.py  produce_tilings.py  visualize_healpix.py
sky_tiling/tile_pixel_maps/: config_7dt.ini  config_7dt_separate.ini
sky_tiling/utilities/: AllSkyMap_basic.py
src/: AntColony.cpp  GCP.cpp  Genetic.cpp  Greedy.cpp  ILP_cplex.cpp  ILP_gurobi.cpp  ReadData.cpp  TestFunctions.cpp  helplers.cpp  main.cpp  main_custom.cpp
(+258 files in other folders)
